package games.tetris

import games.tetris.TetrisConstants.BG
import ggi.ExtendedAbstractGameState
import math.Vec2d
//import kotlin.math.PI

fun main() {
    val model = TetrisModel()
    println(model.gameOn())
}


class TetrisModel(var nCols: Int = defaultCols, var nRows: Int = defaultRows) {
    val a = Array(nCols) { IntArray(nRows) { BG } };
    var score = 0
    var tetronSprite: TetronSprite? = null

    // the blockCount is used here for a simple deterministic version of the
    // game which is useful for debugging and comparison
    // or maybe better to use the one in TetrisGame instead...
    var blockCount = 0

    // Queue of upcoming shapes for the palette
    val shapeQueue = ArrayList<TetronSprite>()
    var queueSize = 5  // Number of shapes to keep in queue

    init {
        // Fill the initial shape queue
        fillShapeQueue()
        if (tetronSprite == null) newShape()
    }

    fun copy(): TetrisModel {
        val tm = TetrisModel(nCols, nRows)
        tm.score = score
        tm.blockCount = blockCount
        tm.tetronSprite = tetronSprite?.copy()
        // Copy the shape queue
        tm.shapeQueue.clear()
        for (shape in shapeQueue) {
            tm.shapeQueue.add(shape.copy())
        }
        for (i in 0 until nCols)
            for (j in 0 until nRows)
                tm.a[i][j] = a[i][j]
        return tm
    }

    fun getWall(binarise: Boolean = false): ArrayList<Int> {
        val al = ArrayList<Int>()
        for (i in 0 until nCols)
            for (j in 0 until nRows) {
                val v = a[i][j]
                val x = if (binarise)
                    if (v == BG) 0 else 1
                else v
                al.add(v)
            }
        return al
    }

    fun move(dx: Int, dy: Int): Boolean {
        val ts = tetronSprite
        return if (ts != null) {
            ts.move(dx, dy, a)
        } else false
    }

    fun rotate() {
        val ts = tetronSprite
        if (ts != null) ts.rotate(a)
    }

    fun place() {
        val ts = tetronSprite
        if (ts != null) {
            ts.place(a)
            // justLanded = true
        }
    }

    fun gameOn(): Boolean {
        val ts = tetronSprite
        return (ts != null && ts.valid(a))
    }

    fun newShape(): Boolean {
        // Get the next shape from the queue
        if (shapeQueue.isEmpty()) {
            fillShapeQueue()
        }

        if (shapeQueue.isEmpty()) {
            tetronSprite = null
            return false
        }

        val ts = shapeQueue.removeAt(0)
        // Position it at the top
        ts.x = (nCols / 2) - 1
        ts.y = 2

        if (ts.valid(a)) {
            tetronSprite = ts
            // Refill the queue to maintain the desired size
            fillShapeQueue()
            return true
        } else {
            tetronSprite = null
            return false
        }
    }

    private fun generateNextShape(): TetronSprite {
        val tType =
            if (cyclicBlockType) {
                blockCount % Tetrons.shapes.size
            } else {
                rand.nextInt(Tetrons.shapes.size)
            }
        // increment the block count whether we use it to determine block type or not
        blockCount++
        val tColor = if (randomShapeColours) rand.nextInt(Tetrons.shapes.size) else tType
        val x = 0  // Will be positioned when added to game
        val y = 0
        val rotation = if (randomInitialRotation) rand.nextInt(4) else 0
        return TetronSprite(x, y, rotation, tType, tColor)
    }

    private fun fillShapeQueue() {
        while (shapeQueue.size < queueSize) {
            shapeQueue.add(generateNextShape())
        }
    }

    fun getGhost(): TetronSprite? {
        val ts = tetronSprite
        if (ts != null) {
            val ghost = ts.copy()
            while (ghost.move(0, 1, a));
            return ghost
        } else return null
    }

    // this is called after every accepted move
    fun checkRows(): Boolean {
        var flag = false
        var r = 0
        while (r < nRows) {
            if (full(r)) {
                // pling();
                flag = true
                // this gives higher scores for rows popped higher up
                // who dares wins
                score += baseReward // + heightFactor * (nRows - r)
                clearRow(r)
                scroll(r)
                r--
            }
            r++
        }
        return flag
    }

    private fun full(r: Int): Boolean {
        for (i in 0 until nCols) {
            if (a[i][r] == BG) {
                return false
            }
        }
        return true
    }

    private fun clearRow(r: Int) {
        for (i in 0 until nCols) {
            a[i][r] = BG
        }
    }

    private fun scroll(sr: Int) {
        for (r in sr downTo 1)
            for (c in 0 until nCols)
                a[c][r] = a[c][r - 1]
    }



    companion object {
        // var BG = 0
        val rand = kotlin.random.Random(10)
        var baseReward = 100
        var heightFactor = 100
        var defaultRows = 24
        var defaultCols = 8
        var randomShapeColours = false
        var cyclicBlockType = true
        var randomInitialRotation = false
        var includeColumnDiffs = true
        var gameOverPenalty = 0
        var dropSkip = 10
    }
}

// typealias Tetron = Array<Cell>

object TetrisConstants {
    var BG = Tetrons.shapes.size
    var baseReward = 100
    var heightFactor = 100
    var defaultRows = 30
    var defaultCols = 60
}

